added robots and sitemap

--- a/src/component/Home/Reviews/Reviews.css
+++ b/src/component/Home/Reviews/Reviews.css
@@ -1,7 +1,12 @@
 #testimonial {
     padding: 7rem 0 6rem;
     background: #F8F5FF;
-}
+}#HappyClient {
+    padding: 7rem 0 6rem;
+    background: #ffffff;
+     height: 800px;
+
+ }
 .review{
     box-shadow: 1px 0 20px rgb(0 0 0 / 10%);
     padding: 1rem;
